# hackerdogs-tools

./: .env.example  .gitignore  CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPARISON_REPORT.md  COMPLETE_TEST_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CREWAI_VERSION_FIX.md  DEPRECATION_WARNINGS_EXPLAINED.md  FINAL_TEST_REPORT.md  FIX_CREWAI_SIMPLE.md  INSTALL_CREWAI_COMPLETE.md  INSTALL_CREWAI_FIX.md  INSTALL_OPTIONAL_DEPENDENCIES.md  JSON_VERBATIM_FIXES.md  MANIFEST.in  MIGRATION_GUIDE.md  NUCLEI_CODE_REVIEW.md  NUCLEI_TEST_EXECUTION_REPORT.md  NUCLEI_TEST_FIXES_SUMMARY.md  NUCLEI_TEST_RESULTS.md  NUCLEI_TEST_RESULTS_REVIEW.md  NUCLEI_TEST_RESULTS_REVIEW_FINAL.md  PACKAGE_SETUP.md  PYTHON_3_14_ISSUE.md  QUICK_FIX_CREWAI.md  README.md  SETUP_PYTHON_3_12.sh  SPIDERFOOT_ALL_IMPLEMENTATIONS_PLAN.md  SPIDERFOOT_BATCH1_REVIEW.md  SPIDERFOOT_BUG_FIXES.md  SPIDERFOOT_CODE_REVIEW.md  SPIDERFOOT_IMPLEMENTATIONS_BATCH1.md  SPIDERFOOT_IMPLEMENTATION_EXPLANATION.md  SPIDERFOOT_IMPLEMENTATION_GAP.md  SPIDERFOOT_IMPLEMENTATION_PROGRESS.md  SPIDERFOOT_IMPLEMENTATION_STATUS.md  SPIDERFOOT_MIGRATION_APPROACH.md  SPIDERFOOT_MIGRATION_DESIGN.md  (+28 more)
hackerdogs_tools/: __init__.py  victorialogs_tools.py
hackerdogs_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hackerdogs_tools/osint/: AMASS_DATA_DIRECTORY.md  DEPENDENCIES.md  DOCKER_IMPLEMENTATION_GUIDE.md  DOCKER_IN_DOCKER.md  DOCKER_PROCEDURE.md  DOCKER_QUICK_START.md  DOCKER_SETUP.md  FIXES_APPLIED.md  FIX_SYNTAX_ERRORS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TRACKER.md  IMPORT_RESOLUTION.md  LOGGING_VERIFICATION.md  OFFICIAL_DOCKER_IMAGES.md  OSINT_TOOLS_PRD.md  PYTHON_ALTERNATIVES.md  QUICK_START.md  RECON_SCENARIOS.md  SUBFINDER_CONFIG_GUIDE.md  __init__.py  amass_config.py  docker_client.py  generate_spiderfoot_tools.py  generate_tools.py  subfinder-config.yaml  subfinder-provider-config.yaml  test-emails.txt  test-usernames.txt  test_domains.py  test_identity_data.py  test_websites.py  top10-scenarios.md  websites.txt
hackerdogs_tools/osint/content/: __init__.py  browserless_crewai.py  browserless_langchain.py  crawl4ai_crewai.py  crawl4ai_docker_example.py  crawl4ai_langchain.py  onionsearch_crewai.py  onionsearch_langchain.py  scrapy_crewai.py  scrapy_langchain.py  waybackurls_crewai.py  waybackurls_langchain.py
hackerdogs_tools/osint/docker/: Dockerfile  README.md  README_CONTAINER_DEPLOYMENT.md  docker-compose.full-stack.yml  docker-compose.yml  publish_to_dockerhub.sh
hackerdogs_tools/osint/frameworks/: __init__.py  spiderfoot_crewai.py  spiderfoot_langchain.py
hackerdogs_tools/osint/identity/: MAIGRET_IMPLEMENTATION.md  MAIGRET_VERBATIM_OUTPUT.md  __init__.py  ghunt_crewai.py  ghunt_langchain.py  holehe_crewai.py  holehe_langchain.py  maigret_crewai.py  maigret_langchain.py  sherlock_crewai.py  sherlock_langchain.py
hackerdogs_tools/osint/infrastructure/: AMASS_CODE_REVIEW.md  AMASS_FIXES_APPLIED.md  AMASS_FIXES_SUMMARY.md  AMASS_TEST_DIAGNOSIS.md  AMASS_TEST_DIAGNOSIS_FINAL.md  AMASS_TEST_FAILURES_FIXED.md  AMASS_TEST_REPORT.md  AMASS_TEST_REPORT_FINAL.md  AMASS_TEST_REPORT_INPUTS.md  AMASS_V5_DATA_STORAGE.md  AMASS_V5_FIXES_SUMMARY.md  AMASS_V5_WORKFLOW.md  CREWAI_INPUTS_UPDATE_SUMMARY.md  CREWAI_INPUTS_USAGE.md  HOW_DOMAIN_IS_PASSED.md  __init__.py  amass_crewai.py  amass_langchain.py  dnsdumpster_crewai.py  dnsdumpster_langchain.py  masscan_crewai.py  masscan_langchain.py  nuclei_crewai.py  nuclei_langchain.py  subfinder_crewai.py  subfinder_langchain.py  theharvester_crewai.py  theharvester_langchain.py  zmap_crewai.py  zmap_langchain.py
hackerdogs_tools/osint/metadata/: __init__.py  exiftool_crewai.py  exiftool_langchain.py  yara_crewai.py  yara_langchain.py
hackerdogs_tools/osint/spiderfoot_helpers/: __init__.py  helpers.py
hackerdogs_tools/osint/spiderfoot_modules/: _implementations.py  sfp_abstractapi_crewai.py  sfp_abstractapi_langchain.py  sfp_abusech_crewai.py  sfp_abusech_langchain.py  sfp_abuseipdb_crewai.py  sfp_abuseipdb_langchain.py  sfp_abusix_crewai.py  sfp_abusix_langchain.py  sfp_accounts_crewai.py  sfp_accounts_langchain.py  sfp_adblock_crewai.py  sfp_adblock_langchain.py  sfp_adguard_dns_crewai.py  sfp_adguard_dns_langchain.py  sfp_ahmia_crewai.py  sfp_ahmia_langchain.py  sfp_alienvault_crewai.py  sfp_alienvault_langchain.py  sfp_alienvaultiprep_crewai.py  sfp_alienvaultiprep_langchain.py  sfp_apple_itunes_crewai.py  sfp_apple_itunes_langchain.py  sfp_archiveorg_crewai.py  sfp_archiveorg_langchain.py  sfp_arin_crewai.py  sfp_arin_langchain.py  sfp_azureblobstorage_crewai.py  sfp_azureblobstorage_langchain.py  sfp_base64_crewai.py  sfp_base64_langchain.py  sfp_bgpview_crewai.py  sfp_bgpview_langchain.py  sfp_binaryedge_crewai.py  sfp_binaryedge_langchain.py  sfp_bingsearch_crewai.py  sfp_bingsearch_langchain.py  sfp_bingsharedip_crewai.py  sfp_bingsharedip_langchain.py  sfp_binstring_crewai.py  (+141 more)
hackerdogs_tools/osint/templates/: spiderfoot_crewai_tool.j2  spiderfoot_langchain_tool.j2  spiderfoot_test.j2
hackerdogs_tools/osint/tests/: ALL_TOOLS_VERIFIED.md  AMASS_TEST_OUTPUT_REVIEW.md  AMASS_TEST_RESULTS_REVIEW.md  AMASS_TEST_RESULTS_REVIEW_FINAL.md  CODE_REVIEW_SUMMARY.md  COMPLETE_TOOL_LIST.md  FIX_PLAN.md  PROBLEM_CODE_LOCATIONS.md  QUICK_START.md  README.md  README_TEST_DOMAINS.md  RESULTS_LOCATION.md  SHERLOCK_TEST_FIXES.md  TEST_EXECUTION_PLAN.md  (+145 more)
hackerdogs_tools/prodx/: __init__.py  excel_tools.py  file_operations_tools.py  graph-visualization-tools-PRD.txt  ocr_tools.py  powerpoint_tools.py  run_llm_tests.py  test_comprehensive_real_world.py  test_excel_tools.py  test_file_operations_tools.py  test_llm_agent_integration.py  test_ocr_tools.py  test_powerpoint_tools.py  test_utils.py  test_visualization_tools.py
hackerdogs_tools/tests/: test_sfp_abuseipdb.py  test_sfp_dnsbrute.py  test_sfp_virustotal.py  test_sfp_whois.py
hackerdogs_tools/ti/: __init__.py  misp.py  opencti.py  otx.py  test_misp.py  test_opencti.py  test_otx.py  test_virus_total.py  virus_total.py
(+239 files in other folders)
